--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,88 @@
-/* styles.css */
-body {
+.dark-mode {
+    background-color: #19222b;
+    color: #fff;
+  }
+
+  body.dark-mode tr:hover {
+    background-color: #555; /* Dostosuj kolor tła do swoich preferencji */
+  }
+
+  body.dark-mode th {
+    background-color: #333; /* Dostosuj kolor nagłówka do swoich preferencji */
+    color: #fff; /* Kolor tekstu w nagłówku w trybie ciemnym */
+  }
+
+  .toggle-container {
+    display: flex;
+    align-items: center;
+    color: #fff;
+  }
+
+  #dark-mode-toggle {
+    appearance: none;
+    -webkit-appearance: none;
+    background-color: #61a9d9;
+    width: 60px;
+    height: 34px;
+    border-radius: 17px;
+    position: relative;
+    outline: none;
+    cursor: pointer;
+    margin-right: 10px;
+  }
+
+  #dark-mode-toggle:checked {
+    background-color: #257fbb;
+  }
+
+  #dark-mode-toggle::before {
+    content: '';
+    position: absolute;
+    width: 26px;
+    height: 26px;
+    background-color: #fff;
+    border-radius: 50%;
+    top: 4px;
+    left: 4px;
+    transition: transform 0.3s ease;
+  }
+
+  #dark-mode-toggle:checked::before {
+    transform: translateX(26px);
+  }
+
+  body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin-top: 80px; /* Dostosuj wartość w zależności od wysokości belki górnej */
+    margin-bottom: 60px;
   }
   
   nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #3498db;
     padding: 10px;
-    margin-bottom: 20px;
+    z-index: 1000;
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between; /* Aby umieścić elementy obok siebie */
+    align-items: center;
+    z-index: 1000; /* Ustawiamy z-index, aby stopka była na wierzchu innych elementów */
   }
   
   nav a {
@@ -26,9 +98,11 @@ body {
   }
   
   table {
-    width: 100%;
+    width: 98%;
     border-collapse: collapse;
     margin-top: 20px;
+    margin-left: auto;  
+    margin-right: auto;
   }
   
   th,
@@ -40,6 +114,7 @@ body {
   
   th {
     background-color: #f2f2f2;
+    color: #333;
   }
   
   tr:hover {
@@ -65,4 +140,3 @@ body {
     background-color: #95a5a6;
     cursor: not-allowed;
   }
-  
