--- a/api_client/templates/api_client/booking_list.html
+++ b/api_client/templates/api_client/booking_list.html
@@ -12,12 +12,12 @@
       }
 
       body.dark-mode tr:hover {
-        background-color: #555; /* Dostosuj kolor tła do swoich preferencji */
+        background-color: #555;
       }
 
       body.dark-mode th {
-        background-color: #333; /* Dostosuj kolor nagłówka do swoich preferencji */
-        color: #fff; /* Kolor tekstu w nagłówku w trybie ciemnym */
+        background-color: #333;
+        color: #fff;
       }
 
       .toggle-container {
@@ -64,6 +64,7 @@
         margin-top: 80px; /* Dostosuj wartość w zależności od wysokości belki górnej */
         margin-bottom: 60px;
         background-color: #fff;
+        transition: background-color 0.5s, color 0.5s, background-image 0.5s;
       }
       
       nav {
@@ -157,7 +158,8 @@
       <a href="/booking_create/">Create Booking</a>
       <a href="https://google.com/">Google</a>
       <a href="https://www.ismycomputeronfire.com/">Server Status</a>
-      <a href="">Home</a>
+      <a href="/home_pimp">Home (pimp)</a>
+      <a href="/">Home</a>
       
 
     </nav>
