--- a/api_client/templates/api_client/booking_delete.html
+++ b/api_client/templates/api_client/booking_delete.html
@@ -1,4 +1,3 @@
-<!-- templates/api_client/booking_delete.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -111,6 +110,7 @@
         width: 50%;
         border-collapse: collapse;
         margin-top: 20px;
+        border: 1px solid #ddd;
       }
       
       th,
