kosmetyka koniec i pimp

--- a/api_client/templates/api_client/index.html
+++ b/api_client/templates/api_client/index.html
@@ -85,9 +85,9 @@
           padding: 10px;
           text-align: center;
           display: flex;
-          justify-content: space-between; /* Aby umieścić elementy obok siebie */
+          justify-content: space-between;
           align-items: center;
-          z-index: 1000; /* Ustawiamy z-index, aby stopka była na wierzchu innych elementów */
+          z-index: 1000;
         }
 
         .toggle-container {
@@ -146,6 +146,7 @@
     <a href="/">Delete Booking</a>
 </nav>
 
+
 <section class="main-content">
     <p>Welcome to the Hotel Booking System. Explore the sections using the provided links.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -157,6 +158,7 @@
     <button onclick="location.href='/delete_booking/'" disabled>Delete Booking</button>
 
     <p>Feel free to navigate and use the features of our system.</p>
+    <button onclick="location.href='/home_pimp'">Pimp my website</button>
 </section>
 
 <footer>
