--- a/api_client/templates/api_client/index_pimp.html
+++ b/api_client/templates/api_client/index_pimp.html
@@ -160,6 +160,7 @@
     <button onclick="location.href='/delete_booking/'" disabled>Delete Booking</button>
 
     <p>Feel free to navigate and use the features of our system.</p>
+    <button onclick="location.href='/'">Unpimp my website</button>
 </section>
 
 <footer>
